<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainMenu.fragments.ScoreFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/fragment_score_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_padding"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score_title">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="@dimen/element_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/score_name"
            android:textSize="@dimen/tv_character_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="@dimen/element_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/element_padding"
            android:text="@string/score_points"
            android:textSize="@dimen/tv_character_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="@dimen/element_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score_time"
            android:textSize="@dimen/tv_character_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvScore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tv_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/go3v2"
        android:text="@string/score_activity_title"
        android:textSize="@dimen/fragment_tv_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    bottone di prova per cancellare roba-->

</androidx.constraintlayout.widget.ConstraintLayout>